<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TicketActivity"
    android:orientation="vertical"
    android:padding="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/id_ticket_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/id_ticket"
        android:layout_marginBottom="16dp"
        android:enabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/id_ticket_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/titulo_ticket_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/titulo_ticket"
        android:layout_marginBottom="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/titulo_ticket_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fecha_creacion_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fecha_creacion"
        android:layout_marginBottom="16dp"
        android:enabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fecha_creacion_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nombre_responsable_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre_responsable"
        android:layout_marginBottom="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nombre_responsable_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/equipo_responsable"
        android:layout_marginBottom="16dp">

        <AutoCompleteTextView
            android:id="@+id/equipo_responsable"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/elegir_opcion"
            android:inputType="none"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:id="@+id/tipo_incidencia_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tipo_incidencia"
        android:layout_marginBottom="16dp">

        <AutoCompleteTextView
            android:id="@+id/tipo_incidencia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/elegir_opcion"
            android:inputType="none"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:id="@+id/gravedad_incidencia_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/gravedad_incidencia"
        android:layout_marginBottom="16dp">

        <AutoCompleteTextView
            android:id="@+id/gravedad_incidencia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/elegir_opcion"
            android:inputType="none"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/version_software_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/version_software"
        android:layout_marginBottom="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/version_software_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descripcion_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/descripcion">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/descripcion_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/floating_action_button_guardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_gravity="bottom|end"
        android:text="@string/guardar"
        app:icon="@drawable/ic_save" />

  </LinearLayout>