<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/id_ticket"
                android:layout_weight="1"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/id_ticket"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/id_ticket"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:textSize="16sp" />

        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:dividerInsetStart="0dp"
            app:dividerInsetEnd="0dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titulo_ticket_detalle"
                android:layout_weight="1"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/titulo_ticket"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titulo_ticket"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:textSize="16sp" />

        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:dividerInsetStart="0dp"
            app:dividerInsetEnd="0dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fecha_creacion"
                android:layout_weight="1"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/fecha_creacion_ticket"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fecha_creacion"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:textSize="16sp" />

        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:dividerInsetStart="0dp"
            app:dividerInsetEnd="0dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nombre_responsable_detalle"
                android:layout_weight="1"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/nombre_responsable_ticket"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nombre_responsable"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:textSize="16sp" />

        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:dividerInsetStart="0dp"
            app:dividerInsetEnd="0dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/equipo_responsable"
                android:layout_weight="1"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/equipo_responsable_ticket"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/equipo_responsable"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:textSize="16sp" />

        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:dividerInsetStart="0dp"
            app:dividerInsetEnd="0dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tipo_incidencia_detalle"
                android:layout_weight="1"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tipo_incidencia_ticket"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tipo_incidencia"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:textSize="16sp" />

        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:dividerInsetStart="0dp"
            app:dividerInsetEnd="0dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gravedad_incidencia_detalle"
                android:layout_weight="1"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/gravedad_ticket"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gravedad_incidencia"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:textSize="16sp" />

        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:dividerInsetStart="0dp"
            app:dividerInsetEnd="0dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/version_software"
                android:layout_weight="1"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/version_software_ticket"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/version_software"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:textSize="16sp" />

        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:dividerInsetStart="0dp"
            app:dividerInsetEnd="0dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/descripcion_detalle"
                android:layout_weight="1"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/descripcion_ticket"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/descripcion"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_cambiar_estado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cambiar estatus"
                android:layout_marginEnd="8dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_archivar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Archivar"
                android:layout_marginStart="8dp"
                android:backgroundTint="@color/danger"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>