<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    app:cardElevation="8dp"
    app:cardCornerRadius="16dp"
    app:cardUseCompatPadding="true"
    android:id="@+id/list_element">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:orientation="vertical"
            android:layout_margin="16dp">

            <TextView
                android:id="@+id/id_ticket"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/id_ticket"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/titulo_ticket"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/titulo_ticket"
                android:layout_marginTop="4dp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/incidencia_ticket"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/tipo_incidencia"
                android:layout_marginTop="4dp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/gravedad_ticket"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/gravedad_incidencia"
                android:layout_marginTop="4dp"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp">

            <TextView
                android:id="@+id/text_view_estatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ESTATUS"
                android:textSize="16sp"
                android:background="@color/blue"
                android:textColor="@color/black"
                android:paddingEnd="16dp"
                android:paddingStart="16dp" />
        </LinearLayout>

<!--        <LinearLayout-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="horizontal"-->
<!--            android:layout_marginTop="8dp"-->
<!--            android:layout_marginEnd="8dp">-->

<!--            <ImageView-->
<!--                android:id="@+id/BtnCheckFinalizado"-->
<!--                android:layout_width="24dp"-->
<!--                android:layout_height="24dp"-->
<!--                android:src="@drawable/img_example"-->
<!--                android:layout_margin="8dp"-->
<!--                android:clickable="true" />-->

<!--            <ImageView-->
<!--                android:id="@+id/BtnSubirBaseDeDatos"-->
<!--                android:layout_width="30dp"-->
<!--                android:layout_height="30dp"-->
<!--                android:src="@drawable/img_example"-->
<!--                android:layout_margin="8dp"-->
<!--                android:clickable="true" />-->

<!--        </LinearLayout>-->

    </LinearLayout>

</androidx.cardview.widget.CardView>